# imageGen

./: pyproject.toml
src/: main.py
src/controller/: authentication_services.py  image_services.py
src/core/: config.py
src/database/: bucket.py  connect.py
src/schemas/: models.py  schema.py
src/utilities/: utils.py
src/view/: auth.py  imagen.py
